fix for Bug 105761: pasting partial link loses linkinessr=cmanske; sr=kin